	PR c/80097 	* c-typeck.c (build_binary_op): Add EXCESS_PRECISION_EXPR only around 	optional COMPOUND_EXPR with ubsan instrumentation.

* gcc.dg/ubsan/pr80097.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@246302 138bc75d-0d04-0410-961f-82ee72b054a4